QTip: set z-index to the correct value

--- a/components/qTip/theme.css
+++ b/components/qTip/theme.css
@@ -10,6 +10,10 @@
   position: relative;
   overflow: hidden;
   pointer-events: none;
+
+  &:not(.is-closed) {
+    z-index: 600;
+  }
 }
 
 .qtip {
